--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "gsap": "^2.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-transition-group": "^2.9.0"
   },
   "husky": {
     "hooks": {
