added lazy loading

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gsap": "^2.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-lazyload": "^2.5.0",
     "react-router-dom": "^5.0.0",
     "react-transition-group": "^2.9.0"
   },
